[GTK] DRT needs an implementation of LayoutTestController::setDefersLoading and ::goBack https://bugs.webkit.org/show_bug.cgi?id=85134

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-05-04
Reviewed by Martin Robinson.

Source/WebKit/gtk:

Add support for setDefersLoading in DumpRenderTreeSupportGtk.

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::setDefersLoading):
* WebCoreSupport/DumpRenderTreeSupportGtk.h:
(DumpRenderTreeSupportGtk):

Tools:

Add missing implementation setDefersLoading and goBack to GTK's
LayoutTestController so that the test case rely on these methods
can be enabled.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(resetDefaultsToConsistentValues):
* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(LayoutTestController::goBack):
(LayoutTestController::setDefersLoading):

LayoutTests:

Unskip loader/navigation-while-deferring-loads.html and disable
loader/load-defer-resume-crash.html as it triggers an assertion
failure.

* platform/gtk/test_expectations.txt:

Canonical link: https://commits.webkit.org/103216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116146 268f45cc-cd09-0410-ab3c-d52691b4dbfc