Tools/DumpRenderTree/gtk/DumpRenderTree.cpp
@@ -449,6 +449,7 @@ static void resetDefaultsToConsistentValues()
     webkit_icon_database_set_path(webkit_get_icon_database(), 0);
     DumpRenderTreeSupportGtk::setSelectTrailingWhitespaceEnabled(false);
     DumpRenderTreeSupportGtk::setSmartInsertDeleteEnabled(webView, true);
+    DumpRenderTreeSupportGtk::setDefersLoading(webView, false);
 
     if (axController)
         axController->resetToConsistentState();
